--- a/src/css/style.css
+++ b/src/css/style.css
@@ -298,3 +298,12 @@ a.is-muted:hover {
     height: 200px;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .equipe li {
+    width: 50%;
+  }
+
+  .equipe li:nth-child(2n):not(:last-child) {
+    margin-bottom: 2rem;
+  }
