--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,5 @@
 :root {
-  --alinhar-logo: flex-start;
+  --alinhar-logo: center;
   --destaque: #E500FF;
   --destaque-escuro: #E500FF;
   --botão1: #A020F0;
