--- a/src/css/style.css
+++ b/src/css/style.css
@@ -165,6 +165,7 @@ a.is-muted:hover {
   animation: spin 2s infinite linear;
 }
 
+/* inicio da equipe */
 @keyframes spin {
   0% {
     transform: rotate(0deg);
@@ -214,6 +215,7 @@ a.is-muted:hover {
   margin-right: 5px;
   color: var(--destaque);
 }
+/* fim da equipe */
 
   .navbar-end > .navbar-item:last-child:hover,
   .navbar-end > .navbar-link:last-child:hover {
