--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,8 @@
-/* css inicio, duvidas? não ke pergunte! */
+/* css inicio, duvidas? não me pergunte so posso dizer que css é...
+
+uma linguagem de marcação, amplamente utilizada com HTML ou XHTML, e representa diversas possibilidades para a formatação. O CSS ajuda a editar, alinhar, remover e trabalhar no espaço entre elementos de uma página.
+*/
+
 :root {
   --alinhar-logo: center;
   --destaque: #E500FF;
