--- a/src/css/style.css
+++ b/src/css/style.css
@@ -388,5 +388,9 @@ button:hover {
 
 .cor-A2A{color: #FF7F00}
 .cor-ABC{color: #E700FF}
+
+/* */
 .cor-CBA{color: #8A2700}
+
+/* anjo */
 .cor-CBC{color: #0055FF}
