--- a/src/css/style.css
+++ b/src/css/style.css
@@ -389,7 +389,7 @@ button:hover {
 .cor-A2A{color: #FF7F00}
 .cor-ABC{color: #E700FF}
 
-/* */
+/* construtores */
 .cor-CBA{color: #8A2700}
 
 /* anjo */
