--- a/src/css/style.css
+++ b/src/css/style.css
@@ -387,9 +387,11 @@ button:hover {
 /* finap dos botoes */
 
 .cor-A2A{color: #FF7F00}
+
+/* semi-deuses */
 .cor-ABC{color: #E700FF}
 
-/* construtores */
+/* arcanjos */
 .cor-CBA{color: #8A2700}
 
 /* anjo */
