--- a/src/css/style.css
+++ b/src/css/style.css
@@ -150,7 +150,7 @@ footer.section {
 }
 
 .article-content {
-  background-color: #4a4a4a;
+  background-color: #666666;
   padding: 1rem;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
