--- a/src/css/style.css
+++ b/src/css/style.css
@@ -150,7 +150,7 @@ footer.section {
 }
 
 .article-content {
-  background-color: #666666;
+  background-color: #141517;
   padding: 1rem;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
@@ -170,7 +170,7 @@ article.footer {
   flex-direction: column;
   background-color: var(--destaque);
   padding: 1rem;
-  color: #4a4a4a;
+  color:  #fff;
   text-align: center;
   border-radius: 5px;
 }
