--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,7 +5,7 @@ uma linguagem de marcação, amplamente utilizada com HTML ou XHTML, e represent
 
 :root {
   --alinhar-logo: center;
-  --destaque: #E500FF;
+  --destaque: #CE6D8B;
   --destaque-escuro: #E500FF;
   --botão1: #A020F0;
   --botão2: #00FF00;
