--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,7 +6,7 @@ uma linguagem de marcação, amplamente utilizada com HTML ou XHTML, e represent
 :root {
   --alinhar-logo: center;
   --destaque: #CE6D8B;
-  --destaque-escuro: #E500FF;
+  --destaque-escuro: #CE6D8B;
   --botão1: #A020F0;
   --botão2: #00FF00;
   --botão3: #fa0000;
