--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,6 +31,7 @@ body {
   background-image: url('https://media.discordapp.net/attachments/933358218552442951/956941256402018304/download.jpeg');
   background-position: center;
   background-repeat: no-repeat;
+  background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
 }
