--- a/src/css/particle.css
+++ b/src/css/particle.css
@@ -2,8 +2,8 @@
 /* mixins */
 /* Styles */
 .particle, .particle:after {
-  background: transparent;
-  position: absolute;
+/*  background: transparent;*/
+  
 }
 
 .particle:after
