--- a/src/css/particle.css
+++ b/src/css/particle.css
@@ -2,8 +2,7 @@
 /* mixins */
 /* Styles */
 .particle, .particle:after {
-/*  background: transparent;*/
-  
+  background: transparent;
 }
 
 .particle:after
