--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,12 +4,18 @@
   --alinhar-logo: flex-start; /* flex-start (esquerda), center (meio) ou flex-end (direita) */
 }
 
-html {
-  scroll-behavior: smooth;
+body, html {
+  margin:0;
+  padding:0;
+  border: none;
 }
 
 body {
-  
+background: url(http://i.stack.imgur.com/o7AFv.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 header.section {
