--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,7 @@ body, html {
 }
 
 body {
-background: url(http://i.stack.imgur.com/o7AFv.jpg) no-repeat center center fixed; 
+background: url(https://media.discordapp.net/attachments/936064707956203520/981227751858122772/IMG_20220531_130834.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
