--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url("");
+  background-color: #000000;
   background-repeat: no-repeat;
   background-position: right top;
   background-attachment: fixed;
