--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,13 +4,22 @@
   --alinhar-logo: flex-start; /* flex-start (esquerda), center (meio) ou flex-end (direita) */
 }
 
-body {
-  background-color: #000000;
-}
+body{
+           overflow: hidden;
+           padding: 0;
+           margin: 0;
+       }
 
-body, html {
+        .max-width {
+            background-image: url("img/the_wicther.png");
+            background-size: cover;
+            background-repeat: no-repeat;
 
-}
+            width: 100vw;
+            height: 100vh;
+            margin: 0 auto;
+            background-color: #fff;
+        }
 
 header.section {
   padding-top: 2rem;
