--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,7 +18,7 @@ body{
             width: 100vw;
             height: 100vh;
             margin: 0 auto;
-            background-color: #fff;
+            background-color: #000000;
         }
 
 header.section {
