--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,21 +5,17 @@
 }
 
 body{
-           overflow: hidden;
-           padding: 0;
-           margin: 0;
-       }
+   overflow: hidden;
+   padding: 0;
+   margin: 0;
+}
 
-        .max-width {
-            background-image: url("img/the_wicther.png");
-            background-size: cover;
-            background-repeat: no-repeat;
-
-            width: 100vw;
-            height: 100vh;
-            margin: 0 auto;
-            background-color: #000000;
-        }
+.max-width {
+     width: 100vw;
+     height: 100vh;
+     margin: auto;
+     background-color: #000000;
+}
 
 header.section {
   padding-top: 2rem;
